feat: add footer html and styles (Wed, Nov 15, 2023 23:20 PM)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,43 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="fonts.css">
         <link rel="stylesheet" href="media-screen.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="">
         <title>International Legal Center</title>
     </head>
+    <div class="wrapper">
+        <div class="gradient"><img src="assets/image/gradient.png" alt="gradient"></div>
+        <header>
+            <div class="header__container">
+                <div class="header__block">
+                    <div class="header-logo"><img src="assets/icons/logo.svg" alt="logo"></div>
+                    <div class="header-text">
+                        <p>Первый цифровой международный</p> 
+                        <p>юридический центр</p>
+                    </div>
+                    <div class="header-number">8 (800) 511-37-68</div>
+                    <div class="header-btn"><button>Войти</button></div>
+                </div>
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="#about" class="nav-link">О компании</a></li>
+                        <li class="nav-item"><a href="#services" class="nav-link">Услуги</a></li>
+                        <li class="nav-item"><a href="#sirius" class="nav-link">Sirius</a></li>
+                        <li class="nav-item"><a href="#tarif" class="nav-link">Тарифы</a></li>
+                        <li class="nav-item"><a href="#faq" class="nav-link">FAQ</a></li>
+                        <li class="nav-item"><a href="#contacts" class="nav-link">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+    </div>
     <body>
