feat: add html and css for some sections (Fri, Nov 17, 2023 23:41 PM)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,153 @@
             </div>
         </header>
         <main>
+            <div class="main__container">
+                <div class="main__block">
+                    <div class="main__podblock1">
+                    <div class="main__title">
+                        <p>Юридический полис ILC —</p>
+                        <p>быстрое решение сложных</p>
+                        <p>вопросов 24/7</p>
+                    </div>
+                    <div class="main__text">
+                        Ваша личная команда профессиональных юристов, которая всегда под рукой. А также доступ к бонусам партнерской программы — доход 
+                        до $260 с каждого полиса, купленного по вашему приглашению.
+                    </div>
+                    <div class="main__button"><button>Попробовать бесплатно</button></div>
+                </div>
+                <div class="main__images">
+                    <img src="assets/image/creative_process.svg" alt="main image" class="image1">
+                    <img src="assets/image/element1.svg" alt="element" class="element1">
+                </div>
+                <div class="main__podblock2">
+                    <div class="main__frame">
+                        <div class="main__frame-column">
+                            <img src="assets/icons/card1.svg" alt="" class="frame__icon">
+                            <div class="frame__column-text">Юридическая поддержка 24/7</div>
+                        </div>
+                        <div class="main__frame-column">
+                            <img src="assets/icons/card2.svg" alt="" class="frame__icon">
+                            <div class="frame__column-text">Множество возможностей в одном полисе</div>
+                        </div>
+                        <div class="main__frame-column">
+                            <img src="assets/icons/card3.svg" alt="" class="frame__icon">
+                            <div class="frame__column-text">Бонусы партнерской программы</div>
+                        </div>                    
+                    </div>
+                </div>
+            </div>
 
+            <div class="ilc__block">
+                <div class="ilc__column-1">
+                    <div class="ilc__logo"><img src="assets/icons/logo_2.svg" alt="ilc" class="logo-2"></div>
+                    <div class="ilc__clmn1-title">Ваша личная online команда юристов</div>
+                    <div class="ilc__clmn1-text">Мы предоставляем комплексный консалтинговый сервис с полисной системой обслуживания для частных клиентов и для бизнеса, с использованием новейших цифровых технологий.</div>
+                </div>
+                <div class="ilc__column-2">
+                    <div class="clmn2__image-1"><img src="assets/icons/ellipse.svg" alt=""></div>
+                    <div class="clmn2__image-2"><img src="assets/icons/ellipse.svg" alt=""></div>
+                    <div class="clmn2__image-3"><img src="assets/icons/ellipse.svg" alt=""></div>
+                    <div class="ilc__clmn2-podblock ilc__clmn2-podblock-1">
+                        <div class="clmn2-podblock-title-1">100+ <span>тыс</span></div>
+                        <div class="clmn2-podblock-text">Клиентов по всему миру</div>
+                    </div>
+                    <div class="ilc__clmn2-podblock ilc__clmn2-podblock-2">
+                        <div class="clmn2-podblock-title-2">15 <span>лет</span></div>
+                        <div class="clmn2-podblock-text">Опытных юристов в штате</div>
+                    </div>
+                    <div class="ilc__clmn2-podblock ilc__clmn2-podblock-3">
+                        <div class="clmn2-podblock-title-3">50+</div>
+                        <div class="clmn2-podblock-text">Опытных юристов в штате</div>
+                    </div>
+                    <div class="ilc__clmn2-podblock ilc__clmn2-podblock-4">
+                        <div class="clmn2-podblock-title-4">SIRIUS</div>
+                        <div class="clmn2-podblock-text">Система на базе искусственного интеллекта</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="support__block">
+                <div class="support__title">Даём поддержку</div>
+                <div class="support__cards">
+                    <div class="support-card">
+                        <img src="assets/icons/card2_1.svg" alt="" class="support-img">
+                        <div class="support__card-title">Бизнесу</div>
+                        <div class="support__card-text">Услуги профессиональных юристов для вашей компании по фиксированному тарифу — это в несколько раз выгоднее, чем содержать свой штат.</div>
+                    </div>
+                    <div class="support-card">
+                        <img src="assets/icons/card2_2.svg" alt="" class="support-img">
+                        <div class="support__card-title">StartUP проектам</div>
+                        <div class="support__card-text">Эксперты ILC помогут выбрать оптимальную правовую форму для ведения бизнеса, оптимизировать налоги и подготовить необходимый  пакет документов.</div>
+                    </div>
+                    <div class="support-card">
+                        <img src="assets/icons/card2_3.svg" alt="" class="support-img">
+                        <div class="support__card-title">Частным клиентам</div>
+                        <div class="support__card-text">Оперативные решения сложных вопросов в режиме онлайн: ДТП, наследство, страховые споры, земельные и имущественные процессы, защита прав.</div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="service__block">
+                <div class="service__title title">Преимущества сервиса</div>
+                <div class="service__row-1">
+                    <div class="telephone__question">
+                    <div class="telephone-img"><img src="assets/image/telephone.png" alt=""></div>
+                    <div class="question__block">
+                        <div class="question__title">Чем могу вам помочь?</div>
+                        <div class="question__button"><button>Задайте вопрос</button></div>
+                    </div>
+                    </div>
+                        <div class="sirius__flex">
+                            <div class="sirius__title">SIRIUS</div>
+                            <div class="sirius__flex-row">
+                                <div class="row__column-1">
+                                    <p>— первый полноценный искусственный интеллект, самостоятельно консультирующий людей по любым юридическим вопросам в режиме реального времени.</p>
+                                    <p>Sirius анализирует входящий запрос и оперативно генерирует квалифицированный ответ на основании юридической логики.</p>
+                                    <p>Доступ к системе предоставляется владельцу полиса в личном кабинете на нашем сайте.</p>
+                                </div>
+                                <div class="row__column-2">
+                                    <div class="point__row"><img src="assets/icons/point.svg" alt="" class="point-img"><span>работает 24/7</span></div>
+                                    <div class="point__row"><img src="assets/icons/point.svg" alt="" class="point-img"><span>100% точность и корректность ответов</span></div>
+                                    <div class="point__row"><img src="assets/icons/point.svg" alt="" class="point-img"><span>при необходимости, подключает живого специалиста</span></div>
+                                    <div class="point__row"><img src="assets/icons/point.svg" alt="" class="point-img"><span>не берет больничный и никогда не уволится</span></div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                <div class="service__row-2">
+                    <div class="service__cards">
+                        <div class="service-card">
+                            <img src="assets/icons/card3_1.svg" alt="" class="service-card-img">
+                            <div class="service-card-title">Удобный формат</div>
+                            <div class="service-card-text">Консультируем 24/7 в любом удобном формате: чат, аудио-звонок, c помощью искусственного интеллекта Sirius в личном кабинете.</div>
+                        </div>
+                        <div class="service-card">
+                            <img src="assets/icons/card3_2.svg" alt="" class="service-card-img">
+                            <div class="service-card-title">Доступная цена</div>
+                            <div class="service-card-text">Выбирайте комфортный для себя пакет юридической поддержки, оплачивая только то, что действительно нужно.</div>
+                        </div>
+                        <div class="service-card">
+                            <img src="assets/icons/card3_3.svg" alt="" class="service-card-img">
+                            <div class="service-card-title">Налоговый калькулятор</div>
+                            <div class="service-card-text">Точный расчет налоговой нагрузки за считанные минуты с помощью телеграм-бота ILC_tax — это быстро и удобно!</div>
+                        </div>
+                        <div class="service-card">
+                            <img src="assets/icons/card3_4.svg" alt="" class="service-card-img">
+                            <div class="service-card-title">Конструктор документов</div>
+                            <div class="service-card-text">Доступ к более чем 9500 готовых и проработанных документов для бизнеса — бесплатно!</div>
+                        </div>
+                        <div class="service-card">
+                            <img src="assets/icons/card3_5.svg" alt="" class="service-card-img">
+                            <div class="service-card-title">Бесплатный доступ для всех, кто зарегистрируется</div>
+                            <div class="service-card-text">Конструктор с ограниченным количеством документов на базе телеграм-бота</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            </div>
         </main>
         <footer>
 
